--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,75 +1,73 @@
-
-  .home .illustration {
-    width: 40vw;
-  }
-  .home .illustration.illustration2
-  {
-    position: absolute;
+.home .illustration {
+  width: 40vw;
+}
+.home .illustration.illustration2 {
+  position: absolute;
+  top: -60vh;
+  right: 0;
+  animation: shift-illustration-small 4s cubic-bezier(0.83, 0.31, 0.58, 1) -2s infinite;
+}
+@keyframes shift-illustration-small {
+  from {
     top: -60vh;
-    right: 0; 
-    animation: shift-illustration-small 4s cubic-bezier(0.83, 0.31, 0.58, 1) -2s infinite;
-    position: relative;
   }
-  @keyframes shift-illustration-small {
-    from {
-      top: -60vh;
-    }
-    50% {
-      top: -57vh;
-    }
-    to {
-      top: -60vh;
-    }
+  50% {
+    top: -57vh;
   }
-  .about {
-    width: 100vw;
-    flex-direction: column;
+  to {
+    top: -60vh;
   }
-  .about .cover
-  {
-    flex-direction: column;
-    align-items: center;
-  }
-  .about .profile {
-    height: 40vh;
-    width: auto;
-    margin-right: 0vw;
-  }
-  .about .about-content {
-    width: 100vw;
-    height: 100%;
-    justify-content: center;
-    text-align: justify;
-    padding: 0.5rem;
-  
-  }
-  .about .slide-in {
-    transform: translateX(0vw);
-    opacity: 100;
-  }
-  .about .image-bg {
-   display: none;
-  }  
-  .skills .img-box
-  {
-    margin: 0.5rem;
-    height: 35vh;
-    width: 40vw;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 3rem 0;
-  }
-  .pc 
-  {
-    list-style: disc;
-    list-style-image: linear-gradient(45deg,var(--secondary),var(--secondary),rgb(247, 242, 179),var(--secondary));
-  }
-  .projects .card
-  {
-    max-width: 80vw;
-    height: 60vh;
-  }
+}
+.about {
+  width: 100vw;
+  flex-direction: column;
+}
+.about .cover {
+  flex-direction: column;
+  align-items: center;
+}
+.about .profile {
+  height: 40vh;
+  width: auto;
+  margin-right: 0vw;
+}
+.about .about-content {
+  width: 100vw;
+  height: 100%;
+  padding: 0.5rem;
+  justify-content: center;
+  text-align: justify;
+}
+.about .slide-in {
+  opacity: 100;
+  transform: translateX(0vw);
+}
+.about .image-bg {
+  display: none;
+}
+.skills .img-box {
+  height: 35vh;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  margin: 0.5rem;
+  padding: 3rem 0;
+}
+.pc {
+  list-style: disc;
+  list-style-image: linear-gradient(
+    45deg,
+    var(--secondary),
+    var(--secondary),
+    rgb(247, 242, 179),
+    var(--secondary)
+  );
+}
+.projects .card {
+  height: 60vh;
+  max-width: 80vw;
+}
