--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,11 +1,9 @@
-:root
-{
-  --dark:#041C32;
-  --dark2:#04293A;
-  --primary:#064663;
-  --secondary:#ECB365;
-  --white:#f4efef;
-
+:root {
+  --dark: #041c32;
+  --dark2: #04293a;
+  --primary: #064663;
+  --secondary: #ecb365;
+  --white: #f4efef;
 }
 * {
   margin: 0;
@@ -16,33 +14,39 @@
   text-decoration: none;
 }
 body {
-  background-color: var(--dark);
   width: 100vw;
-  min-height: 100vh;
-  color: var(--white);
   height: fit-content;
+  min-height: 100vh;
+  background-color: var(--dark);
+  color: var(--white);
   overflow-x: hidden;
 }
-.heading
-{
-  text-align: center;
+.heading {
   font-size: 2rem;
   font-weight: bolder;
+  text-align: center;
 }
-#navbar
-{
+#navbar {
   background-color: var(--white);
   box-shadow: 1px 0px 10px #0646635f;
 }
 .btn-self {
+  color: var(--white);
+  background-image: linear-gradient(
+    45deg,
+    var(--secondary),
+    var(--secondary),
+    var(--secondary),
+    #fae1bf,
+    var(--secondary),
+    var(--secondary)
+  );
   margin: 0;
-  background-image: linear-gradient(45deg,var(--secondary),var(--secondary),var(--secondary),#fae1bf,var(--secondary),var(--secondary));
-  border-radius: 5rem;
   padding: 0.5rem 0.7rem;
   border: 1px solid var(--white);
-  color: var(--white);
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+  border-radius: 5rem;
   font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 2px 2px 10px var(--secondary);
 }
 .navbar .logo {
@@ -59,22 +63,15 @@ body {
 .navbar .dropdown .fa {
   font-size: 1.5rem;
 }
-
-
-
-
-
-.footer
-{
+.footer {
   display: flex;
+  justify-content: flex-end;
   padding: 1rem 3rem;
   margin-top: 2rem;
-  justify-content: flex-end;
-  border-top: 1px solid rgba(255,255,255,0.6);
+  border-top: 1px solid rgba(255, 255, 255, 0.6);
 }
-.footer a
-{
+.footer a {
   color: var(--secondary);
-  text-decoration: none;
   font-style: italic;
+  text-decoration: none;
 }
